crates/but-api-macros/tests/tests/ui/fail/default_cmd_requires_legacy.stderr
error[E0425]: cannot find function `with_context_cmd` in this scope
  --> tests/ui/fail/default_cmd_requires_legacy.rs:19:13
   |
14 | pub fn with_context(_ctx: but_ctx::Context, value: i32) -> anyhow::Result<i32> {
   | ------------------------------------------------------------------------------ similarly named function `with_context` defined here
...
19 |     let _ = with_context_cmd(serde_json::json!({
   |             ^^^^^^^^^^^^^^^^
   |
note: found an item that was configured out
  --> tests/ui/fail/default_cmd_requires_legacy.rs:14:8
   |
13 | #[but_api]
   | ---------- the item is gated behind the `legacy` feature
14 | pub fn with_context(_ctx: but_ctx::Context, value: i32) -> anyhow::Result<i32> {
   |        ^^^^^^^^^^^^
help: a function with a similar name exists
   |
19 -     let _ = with_context_cmd(serde_json::json!({
19 +     let _ = with_context(serde_json::json!({
   |
